# wasm-vue

./: .gitignore  Cargo.toml  README.md  package.json  vue.config.js
docs/: WASM-talk.odp
public/: index.html  worker.js
src/: App.vue  lib.rs  main.js  netget.rs
src/budget/: lib.rs  main.rs  mod.rs  nodedata.rs  rdcsv.rs
src/canvas3d/: mod.rs
src/components/: BCanvas.vue  Budget.vue  HelloWorld.vue
src/vue-cli-plugin-wasm-pack/: index.js  package.json
static/: jobj.json  test-small.csv
